--- a/gb/20/1/29/n11829122.md
+++ b/gb/20/1/29/n11829122.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rfvbv298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rfvbv298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rfvbv298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rfvbv298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rfvbv298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽约华埠确诊一例武汉肺炎？官方辟谣 （影音）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/f84849646ddda8ff70f8c5a67deb56a9-600x400.jpg" />
 <h6>纽约市卫生局局长巴博（ 左二）昨天在华埠的记者会上证实，目前的疑似个案都不源于纽约市。 (蔡溶/大纪元)
 </h6>
 <hr>
-<p>【大纪元2020年01月29日讯】（大纪元记者蔡溶纽约报导）昨天（1月28日）微信群组有传言称纽约出现一名确诊感染<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>的病患，由华埠<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E7%8E%8B%E5%98%89%E5%BB%89%E7%A4%BE%E5%8C%BA%E5%8C%BB%E7%96%97%E4%B8%AD%E5%BF%83.md">王嘉廉社区医疗中心</a>转介到以色列西奈山贝思医院治疗。王嘉廉中心副总裁余永新当日辟谣，纽约市卫生局长也表示，无纽约市患者被筛检，纽约州9个疑似个案均非纽约市。</p>
+<p>【大纪元2020年01月29日讯】（大纪元记者蔡溶纽约报导）昨天（1月28日）微信群组有传言称纽约出现一名确诊感染<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>的病患，由华埠<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8E%8B%E5%98%89%E5%BB%89%E7%A4%BE%E5%8C%BA%E5%8C%BB%E7%96%97%E4%B8%AD%E5%BF%83.md#1">王嘉廉社区医疗中心</a>转介到以色列西奈山贝思医院治疗。王嘉廉中心副总裁余永新当日辟谣，纽约市卫生局长也表示，无纽约市患者被筛检，纽约州9个疑似个案均非纽约市。</p>
 <figure id="11829127" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/2f81760b20c1bcf155956bb9a88f18e4-450x600.jpeg" alt="华埠一家药房23日声称有N95医疗口罩，但28日社区居民去询问时，已断货。" width="500" /><figcaption class="wp-caption-text">华埠一家药房23日声称有N95医疗口罩，但28日社区居民去询问时，已断货。（陈家龄提供）</figcaption></figure>
 <figure id="11829126" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/4a9316b217db3f5ffc20aed7b798d44f-450x600.jpeg" alt="华埠一家药房声称有口罩出售，但28日社区居民去询问时，已断货。" width="500" /><figcaption class="wp-caption-text">华埠一家药房声称有口罩出售，但28日社区居民去询问时，已断货。（陈家龄提供）</figcaption></figure>
-<figure id="11829125" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/ee60357db45746fe6797260e9d8736f3-450x600.jpg" alt="市议员陈倩雯的助手陈少锋说，微信传言称华埠有一例确诊的武汉肺炎，是假消息。" width="500" /><figcaption class="wp-caption-text">市议员陈倩雯的助手陈少锋说，微信传言称华埠有一例确诊的<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>，是假消息。（蔡溶翻摄）</figcaption></figure>
+<figure id="11829125" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/ee60357db45746fe6797260e9d8736f3-450x600.jpg" alt="市议员陈倩雯的助手陈少锋说，微信传言称华埠有一例确诊的武汉肺炎，是假消息。" width="500" /><figcaption class="wp-caption-text">市议员陈倩雯的助手陈少锋说，微信传言称华埠有一例确诊的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>，是假消息。（蔡溶翻摄）</figcaption></figure>
 <figure id="11829124" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/53f9211e9be0a91abb1f2c1baa0bc5c5-450x338.jpg" alt="纽约街头，很多华人佩戴口罩。" width="500" /><figcaption class="wp-caption-text">纽约街头，很多华人佩戴口罩。（林丹/大纪元）</figcaption></figure>
-<p>纽约<a href="https://github.com/rfvbv298/djy/blob/master/gb/tag/%E7%8E%8B%E5%98%89%E5%BB%89%E7%A4%BE%E5%8C%BA%E5%8C%BB%E7%96%97%E4%B8%AD%E5%BF%83.md">王嘉廉社区医疗中心</a>副总裁及医务总监余永新表示：“我们这里没有接收过任何疑似个案的患者，没有人去过武汉、没有呼吸道疾病患者，不需要致电卫生局寻求建议，因为没有吻合的病患。”</p>
+<p>纽约<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8E%8B%E5%98%89%E5%BB%89%E7%A4%BE%E5%8C%BA%E5%8C%BB%E7%96%97%E4%B8%AD%E5%BF%83.md#1">王嘉廉社区医疗中心</a>副总裁及医务总监余永新表示：“我们这里没有接收过任何疑似个案的患者，没有人去过武汉、没有呼吸道疾病患者，不需要致电卫生局寻求建议，因为没有吻合的病患。”</p>
 <p>纽约市卫生局局长巴博（ Oxiris Barbot）证实，尽管纽约市是中国以外世界上最大的华裔人口居住地，但目前的疑似个案都不源于纽约市。“没有纽约市患者被进行武汉肺炎筛检，纽约州9个疑似个案都是来自纽约市以外。”</p>
-<p><a width="640" b="360" src=""></a><a href="https://git.io/JvY1F"><img width="600" src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/52cwt1CwOIc?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+<p><a width="640" b="360" src=""></a><a href="https://git.io/JvY1F"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/52cwt1CwOIc?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
 <p>周二，纽约州证实，至今已有10起感染新型冠状病毒——武汉肺炎的疑似个案，其中有7人呈阴性反应，3人仍在等待检验结果，并被隔离。</p>
 <p>“我认为只是时间问题，纽约州迟早会发现确诊武汉肺炎的个案”，市卫生局长巴博说。</p>
 <p>她说纽约市已准备就绪，包括华人社区几大医疗机构：美洲中华医学会、亚美医师协会、西奈山医院、玛摩利医院等，形成了一个相当紧密的网路，确保警惕。她强调，所有纽约人不论移民身份或有无保险，都应在纽约市的公立医院和社区卫生中心一视同仁。</p>
@@ -28,41 +28,47 @@
 <p>责任编辑：家瑞</p>
 
 <hr>
-
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/29/n11829122.htm">纽约华埠确诊一例武汉肺炎？官方辟谣 （影音）</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807378.htm">旧金山西餐厅之西餐礼仪知多少（4）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/6/n11772010.htm">旧金山西餐厅之西餐礼仪知多少（3）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/24/n11742135.htm">知味馆：粤菜名家 “味”胜一筹（下）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/16/n11726395.htm">旧金山繁华地段的乡巴佬中餐馆</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/10/22/n11604625.htm">湾区粤菜知味馆：广东菜名家 “味”胜一筹</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/9/9/n11510184.htm">受华人青睐的“网红米粉”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/8/19/n11462726.htm">Brasas Do Brazil巴西烤肉周年庆 成功有秘诀</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/8/12/n11447796.htm">湾区火锅“味鼎”十二品绝味人见人爱</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826899.htm">【拍案惊奇】武汉疫情4个误区 毒源不止一处</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827244.htm">【视频】武汉小伙再曝肺炎疫情真实情况</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827262.htm">安阳女从武汉返乡无症状 五亲属确诊染肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11828145.htm">传中共政治局知疫情或亡党 重点保11城</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11779463.htm">【命理】一朝天子一朝臣 天命所定</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11812177.htm">初三民间故事　老鼠娶亲</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823457.htm">阅微草堂笔记：老虎吃人也有所选择</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825853.htm">武汉肺炎 火化人数知多少？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824388.htm">上海136人医疗队在武汉求救 没有饭吃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824118.htm">【十字路口】中共维稳助长肺炎病毒蔓延</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/11/9/n11643258.htm">【思想领袖】香港抗议是“新冷战”前线</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825983.htm">【新闻看点】北京半封城 中南海6动作民心尽失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826851.htm">台湾小狗咬烂护照阻止主人去武汉 网民称赞</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11822832.htm">关心武汉封城惨况 台女星：愿大家都平安</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825293.htm">Kobe骤逝 艺声、雨琦等K-POP明星痛心悼念</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823229.htm">武汉肺炎蔓延 刘德华第三度取消演唱会</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11826784.htm">艺人白嘉莉计划回台定居：台湾女儿回家</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rfvbv298/djy/blob/master/gb/20/1/29/n11829122.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rfvbv298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rfvbv298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rfvbv298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905198.md#1">武汉肺炎疫情蔓延 中共宣传机器进退失据</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/26/n11898226.md#1">船员被疑染武汉肺炎 传奇号游轮连连遭拒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11876376.md#1">【世事关心】武汉肺炎如何演变成政治表演？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/24/n11892629.md#1">武汉肺炎如何防？免费健康展、健康1+1告诉您</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/10/n11859405.md#1">大纪元新唐人全方位直击武汉肺炎疫情</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/7/n11851613.md#1">武汉肺炎疫情持续加剧 川普与习近平通话</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/3/n11840339.md#1">【快讯】加州再确诊2例武汉肺炎 全美11例</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/3/n11840010.md#1">纽约再现2患者 武汉肺炎疑似病例增至3宗</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/20/n11125994.md#1" target="_blank">谁是中华文化的最大破坏者？</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/29/n11829122.htm">纽约华埠确诊一例武汉肺炎？官方辟谣 （影音）</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/29/n11829122.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
